deploy/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orbital
  template:
    metadata:
      labels:
        app: orbital
    spec:
      containers:
        - name: orbital
          image: armadaeksatest.azurecr.io/orbital:v0.0.9
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: cosign-key
              mountPath: /secrets
              readOnly: true
            - name: scratch-exports
              mountPath: /scratch-exports
            - name: dgraph-exports
              mountPath: /dgraph-exports
            - name: restore
              mountPath: /restore
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
      volumes:
        - name: cosign-key
          secret:
            secretName: orbital-secrets
            items:
              - key: cosign.key
                path: cosign.key
        - name: scratch-exports
          persistentVolumeClaim:
            claimName: orbital-scratch-exports
        - name: dgraph-exports
          persistentVolumeClaim:
            claimName: orbital-dgraph-exports
        - name: restore
          persistentVolumeClaim:
            claimName: orbital-restore-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orbital
spec:
  selector:
    app: orbital
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
