deploy/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbital
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: orbital-dev.REPLACE_ME  # replace with actual hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orbital
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - orbital-dev.REPLACE_ME
  #     secretName: orbital-tls
